Add color package, add fake data and create Bootcamp model

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "Mirko Vojinovic",
   "license": "MIT",
   "dependencies": {
+    "colors": "^1.4.0",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongoose": "^8.18.0",
